--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
  <html>
      <head>
        <title> Bloc Jams </title>
+       <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300">
+       <link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+       <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+       <link rel="stylesheet" type="text/css" href="styles/main.css">
      </head>
-     <body>
-        <nav> <!--nav-->
+     <body class="landing">
+        <nav class="navbar">
+          <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo" class="logo">
         </nav>
-        <section> <!--hero-->
-          <h1>Bloc Jams</h1>
-          <h3>Turn the music up!</h3>
+          <section class="hero-content"> <!-- hero content -->
+            <h1 class="hero-title"> Turn the music up!</h1>
         </section>
         <section><!--selling-->
           <div>
