--- a/collection.html
+++ b/collection.html
@@ -19,58 +19,8 @@
            </div>
        </nav>
        <section class="album-covers container clearfix">
-        <div class="collection-album-container column fourth">
-            <img src="assets/images/img2.jpg"/>
-            <div class="collection-album-info caption">
-                <p>
-                    <a class="album-name" href="album.html">The Colors</a>
-                    <br/>
-                    <a href="album.html">Pablo Picasso</a>
-                    <br/>
-                    X songs
-                    <br/>
-                </p>
-            </div>
-        </div>
-        <div class="collection-album-container column fourth">
-            <img src="assets/images/img3.jpg"/>
-            <div class="collection-album-info caption">
-                <p>
-                    <a class="album-name" href="#">The Colors</a>
-                    <br/>
-                    <a href="#">Pablo Picasso</a>
-                    <br/>
-                    X songs
-                    <br/>
-                </p>
-            </div>
-        </div>
-        <div class="collection-album-container column fourth">
-        <img src="assets/images/img4.jpg"/>
-        <div class="collection-album-info caption">
-            <p>
-                <a class="album-name" href="#">The Colors</a>
-                <br/>
-                <a href="#">Pablo Picasso</a>
-                <br/>
-                X songs
-                <br/>
-            </p>
-        </div>
-    </div>
-    <div class="collection-album-container column fourth">
-        <img src="assets/images/img5.jpg"/>
-        <div class="collection-album-info caption">
-            <p>
-                <a class="album-name" href="#">The Colors</a>
-                <br/>
-                <a href="#">Pablo Picasso</a>
-                <br/>
-                X songs
-                <br/>
-            </p>
-        </div>
-    </div>
+
 </section>
+    <script src="scripts/collection.js"></script>
    </body>
 </html>
